# QuakeLogParserLib

./: Cargo.toml  LICENSE  README.md  STATIC_CONFIG.json  config.json
src/: death_causes.rs  errors.rs  interface.rs  lib.rs  mod.rs  service.rs
src/config/: config.rs  dynamic_config.rs  mod.rs  static_config.rs
src/implementation/: death_causes.rs  log_event.rs  log_parser.rs  match_data.rs  mod.rs
