[package]
name = "quake_log_parser_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"]}
serde_json = "1.0.83"
json = "0.12.4"
tokio = { version = "1.33.0", features = ["full"]}
tokio-util = "0.7.10"
regex = "1.5"
once_cell = "1.10"
