[package]
name = "quake_log_parser_lib"
version = "0.1.0"
edition = "2021"
description = "A Sample Lib to Parse Quake Game Log."
license = "MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0.192", features = ["derive"]}
serde_json = "1.0.83"
json = "0.12.4"
tokio = { version = "1.33.0", features = ["full"]}
tokio-util = "0.7.10"
regex = "1.5"
once_cell = "1.10"
lazy_static = "1.4.0"

[repository]
url = "https://github.com/citrixorange/QuakeLogParserLib"